[package]
name = "repl-oxide"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/WardLordRuby/repl-oxide"
keywords = ["repl", "interpreter", "clap", "crossterm"]
categories = ["command-line-interface"]
rust-version = "1.75.0"

[features]
macros = ["dep:tracing"]
runner = ["macros"]
spawner = ["runner", "tokio/macros", "tokio/rt"]
all = ["spawner"]

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
all-features = true

[dependencies]
constcat = "0.6.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
shellwords = "1.1.0"
strip-ansi = "0.1.0"
tokio = { version = "1.43.0", features = ["time"] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41", default-features = false, features = ["attributes"], optional = true }

[dev-dependencies]
clap = { version = "4.5.27", features = ["derive"] }
rand = "0.9.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }

[[example]]
name = "runner"
path = "examples/runner.rs"
required-features = ["runner"]

[[example]]
name = "spawner"
path = "examples/spawner.rs"
required-features = ["spawner"]

[[example]]
name = "basic-custom"
path = "examples/basic_custom.rs"
required-features = ["macros"]

[[example]]
name = "callbacks"
path = "examples/callbacks.rs"
required-features = ["runner"]

[[example]]
name = "completion"
path = "examples/completion.rs"
required-features = ["runner"]
